RemoteMacViews: Disable non-RemoteMacViews behaviors

Non-RemoteMacViews has behaviors to focus, show, and hide browser
windows based on interactions with the app shim process, to simulate
the NSWindows belonging to the app shim process. For hosted apps, this
isn't needed anymore.

Add state to AppShimHost to track if an app is using RemoteMacViews,
and if so, skip all of these behaviors.

Bug: 917433, 904529
Change-Id: I2de17450ec51c6a855a6816fad4d6ccfc0d4f300
Reviewed-on: https://chromium-review.googlesource.com/c/1389950
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618992}
Former-commit-id: 9909e9bf8901db1eeb9a07431c3e7aeb0da163fa